Fix some titles

--- a/ex07/ex07.tex
+++ b/ex07/ex07.tex
@@ -10,6 +10,8 @@
 
 \begin{document}
 
+\maketitle
+
 \begin{enumerate}
 
 \item Consider on a general level the major differences (and similarities)
