--- a/ex01/exercise.tex
+++ b/ex01/exercise.tex
@@ -1,8 +1,9 @@
 
-
 \title{T-61.5130 Machine Learning and Neural Networks}
 \author{Karhunen, Luttinen}
-\date{Exercise 1, 4.11.2012}
+\date{Exercise 1, 2.11.2012}
+
+\usepackage{tikz}
 
 \newcommand{\vect}[1]{{\bf{#1}}}
 \newcommand{\svect}[1]{\boldsymbol{#1}}
@@ -17,9 +18,10 @@
 \item
 
   An odd sigmoid function is defined by
-  \begin{equation*}
+  \begin{equation}
+    \label{eq:sigmoid}
     \varphi(v)=\frac{1-\exp(-av)}{1+\exp(-av)}=\tanh(av/2),
-  \end{equation*}
+  \end{equation}
   where $\tanh$ denotes a hyperbolic tangent. The limiting values of
   this second sigmoid function are $-1$ and $+1$. Show that the derivate 
   of $\varphi(v)$ with respect to $v$ is given by
@@ -33,7 +35,7 @@
   \begin{solution}
 
     The derivative of $\varphi(v)$:
-    \begin{equation}
+    \begin{equation*}
       \begin{split}
         \frac{d\varphi}{dv}&=\frac{a\exp(-av) (1 + \exp(-av)) + a\exp(-av)
           (1 - \exp(-av))} {(1+\exp(-av))^2} \\
@@ -42,24 +44,24 @@
         &= \frac{a}{2} \frac{(1 + \exp(-av))^2 - (1 - \exp(-av))^2}{(1 +
           \exp(-av))^2} = \frac{a}{2} ( 1 - \varphi^2(v) )
       \end{split}
-    \end{equation}
+    \end{equation*}
 
     At the origin: 
-    \begin{equation}
-      \left.\frac{d\varphi}{dv}\right|_{v=0} = \frac{a}{2} (1 - \left(
-        \frac{1 - \exp(-a * 0)}{1 + \exp(-a*0)} \right)^2 = \frac{a}{2}.
-    \end{equation}
-    \begin{equation}
+    \begin{equation*}
+      \left.\frac{d\varphi}{dv}\right|_{v=0} = \frac{a}{2} \left[1 - \left(
+        \frac{1 - \exp(-a * 0)}{1 + \exp(-a*0)} \right)^2\right] = \frac{a}{2}.
+    \end{equation*}
+    \begin{equation*}
       \mbox{When  $a$ $\rightarrow$ $\infty$,  $\varphi(v)$ $\rightarrow$} \left\{ 
         \begin{array}{rl}
           +1, &v > 0 \\
           -1, &v < 0 \\
           0, &v = 0
         \end{array} \right.
-    \end{equation}
+    \end{equation*}
 
     Fig.~\ref{fig:sigmoid} shows the values of the sigmoid
-    function~(\ref{eq:sigmoid}) with different values of $a$.
+    function $\varphi(v)$~\eqref{eq:sigmoid} with different values of $a$.
 
     \begin{figure}[h]
       \begin{center}
@@ -220,6 +222,8 @@
   \end{enumerate}
 
   \begin{solution}
+    \begin{tikzpicture}
+    \end{tikzpicture}
   \end{solution}
   
 \end{enumerate}
