--- a/ex01/exercise.tex
+++ b/ex01/exercise.tex
@@ -3,8 +3,6 @@
 \author{Karhunen, Luttinen}
 \date{Exercise 1, 2.11.2012}
 
-\usepackage{tikz}
-
 \newcommand{\vect}[1]{{\bf{#1}}}
 \newcommand{\svect}[1]{\boldsymbol{#1}}
 \newcommand{\matr}[1]{\boldsymbol{#1}}
@@ -222,7 +220,9 @@
   \end{enumerate}
 
   \begin{solution}
+    AAA
     \begin{tikzpicture}
+      \node[label=1] (h1) {};
     \end{tikzpicture}
   \end{solution}
   
