--- a/ex01/exercise.tex
+++ b/ex01/exercise.tex
@@ -220,9 +220,70 @@
   \end{enumerate}
 
   \begin{solution}
-    AAA
-    \begin{tikzpicture}
-      \node[label=1] (h1) {};
+    \usetikzlibrary{shapes}
+    \usetikzlibrary{chains}
+    \usetikzlibrary{arrows}
+    \begin{tikzpicture}[start chain=hidden going below,
+      start chain=input going below]
+
+      \tikzset{>={triangle 45}}
+      
+      %
+      \foreach \i in {1,...,6} {
+        \node[rectangle,draw] (in\i) at (0,2*7-2*\i) {};
+      }
+      \foreach \i in {1,...,3} {
+        \node[circle,draw,fill=gray,minimum size=20pt] (hid\i) at (3,2*5.5-2*\i) {};
+      }
+      % 
+      % % Hidden layer
+      % \node[circle,fill=gray!25,draw,minimum
+      % size=20pt,on chain=hidden,label=1] (h1) {};
+      % \node[circle,fill=gray!25,draw,minimum
+      % size=20pt,on chain=hidden,label=2] (h2) {};
+      % \node[circle,fill=gray!25,draw,minimum
+      % size=20pt,on chain=hidden,label=3] (h3) {};
+      %
+
+      % Output layer
+      \node[right=100pt of hid1]
+      (out) {$y_n$};
+
+      % Arrows input->hidden
+      \foreach \i in {1,...,6} {
+        \foreach \j in {1,...,3} {
+          \draw[->] (in\i) -- (hid\j);
+        }
+      }
+
+      % Arrow hidden->output
+      \draw[->] (hid1) -- (out);
+
+      % Recurrent arrows
+      \foreach \i in {1,2,3} {
+        % Unit time-delays
+        \path (hid\i) ++(-1.5,3*\i+2) node[draw,rectangle,minimum
+        size=20pt] (z\i) {$z^{-1}$};
+        % Arrows
+        \draw[->] (hid\i) -- ++(1.5+\i*0.5,0) node[at start,label=above
+        right:$x_{\i,n}$] {} node (crossing\i) {} -- ++(0,3*\i+2) --
+        (z\i) -- ++(-\i*0.5-3,0) node (current) {} -- (current |- in\i)
+        -- (in\i) node[at end, label=above left:$x_{\i,n-1}$] {};
+      }
+
+      \node[circle,draw,fill,scale=0.4] at (crossing1) {};
+
+      \draw[<-] (in4) -- ++(-1,0) node[label=left:1] {};
+      \draw[<-] (in5) -- ++(-1,0) node[label=left:$u_{1,n}$] {};
+      \draw[<-] (in6) -- ++(-1,0) node[label=left:$u_{2,n}$] {};
+      
+      % % Input layer
+      % \node[rectangle,draw=black] (in1) {};
+      % \node[rectangle,draw=black,below=30pt of in1] (in2) {};
+      % \node[rectangle,draw=black,below=30pt of in2] (in3) {};
+      % \node[rectangle,draw=black,below=30pt of in3] (in4) {};
+      % \node[rectangle,draw=black,below=30pt of in4] (in5) {};
+      % \node[rectangle,draw=black,below=30pt of in5] (in6) {};
     \end{tikzpicture}
   \end{solution}
   
