Fix exercise dates

--- a/ex06/exercise.tex
+++ b/ex06/exercise.tex
@@ -1,6 +1,6 @@
 \title{T-61.5130 Machine Learning and Neural Networks}
 \author{Karhunen, Luttinen}
-\date{Exercise 6, ??.??.2012}
+\date{Exercise 6, 22.11.2012}
 
 \newcommand{\vect}[1]{{\bf{#1}}}
 \newcommand{\svect}[1]{\boldsymbol{#1}}
