--- a/ex02/exercise.tex
+++ b/ex02/exercise.tex
@@ -1,7 +1,7 @@
 
 \title{T-61.5130 Machine Learning and Neural Networks}
 \author{Karhunen, Luttinen}
-\date{Exercise 2, ??.??.2012}
+\date{Exercise 2, 8.11.2012}
 
 
 % \usepackage{subfigure}
