--- a/ex08/exercise.tex
+++ b/ex08/exercise.tex
@@ -1,7 +1,7 @@
 
 \title{T-61.5130 Machine Learning and Neural Networks}
 \author{Karhunen, Luttinen}
-\date{Exercise 8, ??.??.2012}
+\date{Exercise 8, 29.11.2012}
 
 \newcommand{\vect}[1]{{\bf{#1}}}
 \newcommand{\svect}[1]{\boldsymbol{#1}}
