Make vector function phi bold

--- a/ex01/exercise.tex
+++ b/ex01/exercise.tex
@@ -301,13 +301,13 @@
       behavior of the system, assumed to be noise free, is described
       by the following pair of nonlinear equations:
       \begin{align*}
-        \mathbf{x}(n) &= \phi \left( \mathbf{W}_a \mathbf{x}(n-1) +
+        \mathbf{x}(n) &= \boldsymbol\phi \left( \mathbf{W}_a \mathbf{x}(n-1) +
           \mathbf{W}_b \mathbf{u}(n) \right), \\
         \mathbf{y}(n) &= \mathbf{C} \mathbf{x}(n),
       \end{align*}
       where $\mathbf{W}_a$ is a $q$-by-$q$ matrix, $\mathbf{W}_b$ is a
       $q$-by-($m+1$) matrix, $\mathbf{C}$ is a $p$-by-$q$ matrix and
-      $\phi: \mathbb{R}^q \rightarrow \mathbb{R}^q$ is a diagonal map
+      $\boldsymbol\phi: \mathbb{R}^q \rightarrow \mathbb{R}^q$ is a diagonal map
       described by
 
       \[
